add toggle in dlg

--- a/lib/Views/SharePopup.html
+++ b/lib/Views/SharePopup.html
@@ -25,6 +25,11 @@
                     To <strong>embed</strong>, copy this code to embed this map into an HTML page:
                     <input readonly type="text" data-bind="value: embedCode" size="100" onclick="this.select();" />
                 </div>
+                <div>
+                    <label class="share-popup-checkbox" data-bind="click: toggleShorten">
+                        <input type="checkbox" data-bind="checked: shortenUrl" />Shorten Url
+                    </label>
+                </div>
             </div>
         </div>
     </div>
