--- a/lib/Views/SharePopup.html
+++ b/lib/Views/SharePopup.html
@@ -26,7 +26,7 @@
                     <input readonly type="text" data-bind="value: embedCode" size="100" onclick="this.select();" />
                 </div>
                 <div>
-                    <label class="share-popup-checkbox" data-bind="click: toggleShorten">
+                    <label class="share-popup-checkbox">
                         <input type="checkbox" data-bind="checked: shortenUrl" />Shorten Url
                     </label>
                 </div>
