Add loading spinner to catalog info page.

--- a/lib/Styles/CatalogItemInfo.less
+++ b/lib/Styles/CatalogItemInfo.less
@@ -139,3 +139,14 @@
 .catalog-item-info-properties-name {
     display: inline-block;
 }
+
+.catalog-item-info-loading {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 66px;
+    height: 66px;
+}
