--- a/lib/Views/SharePopup.html
+++ b/lib/Views/SharePopup.html
@@ -2,7 +2,7 @@
     <div class="share-popup">
         <div class="modal-header">
             <div class="modal-close-button" data-bind="click: close">&times;</div>
-            <h1>Share</h1>
+            <h1 data-bind="text: title"></h1>
         </div>
         <div class="share-popup-content">
             <div class="share-popup-image">
