--- a/lib/Styles/CatalogItemInfo.less
+++ b/lib/Styles/CatalogItemInfo.less
@@ -150,3 +150,35 @@
     width: 66px;
     height: 66px;
 }
+
+.catalog-item-info-details-heading {
+    font-size: 12pt;
+    font-weight: normal;
+    margin: 0;
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+    background-color: rgba(0,0,0, 0.2);
+    border-bottom: @panel-element-border;
+    cursor: pointer;
+    line-height: 40px;
+}
+
+.catalog-item-info-details-expand-button-holder {
+    display: table-cell;
+    width: 20px;
+}
+
+.catalog-item-info-details-expand-button {
+    display: table-cell;
+    position: relative;
+    width: 12px;
+    height: 12px;
+    fill: @panel-text-color;
+    margin-right: 16px;
+}
+
+.catalog-item-info-details-label {
+    display: table-cell;
+    padding-left: 16px;
+}
