Improve info popup content sizing.

--- a/lib/Styles/CatalogItemInfo.less
+++ b/lib/Styles/CatalogItemInfo.less
@@ -27,12 +27,14 @@
 }
 
 .catalog-item-info-content {
-    position: relative;
+    position: absolute;
+    top: 40px;
+    bottom: 0;
+    left: 0;
+    right: 0;
     overflow: auto;
-    height: 435px;
     padding: 15px;
 }
-
 
 .catalog-item-info h2 {
     font-size: 12pt;
