read hash from start

--- a/lib/Views/SharePopup.html
+++ b/lib/Views/SharePopup.html
@@ -23,7 +23,7 @@
                 </div>
                 <div>
                     <label class="share-popup-checkbox">
-                        <input type="checkbox" data-bind="checked: shortenUrl" />Shorten share url using goo.gl
+                        <input type="checkbox" data-bind="checked: shortenUrl" />Shorten share url using web service
                     </label>
                 </div>
                 <div class="share-popup-label">
