--- a/lib/Views/SharePopup.html
+++ b/lib/Views/SharePopup.html
@@ -22,7 +22,7 @@
                     <input readonly type="text" data-bind="value: url" size="100" onclick="this.select();" />
                 </div>
                 <div>
-                    <label class="share-popup-checkbox">
+                    <label class="share-popup-checkbox" data-bind="visible: enableShortenUrl">
                         <input type="checkbox" data-bind="checked: shortenUrl" />Shorten the share url using a web service
                     </label>
                 </div>
