--- a/lib/Views/SharePopup.html
+++ b/lib/Views/SharePopup.html
@@ -23,7 +23,7 @@
                 </div>
                 <div>
                     <label class="share-popup-checkbox" data-bind="visible: enableShortenUrl">
-                        <input type="checkbox" data-bind="checked: shortenUrl" />Shorten the share url using a web service
+                        <input type="checkbox" data-bind="checked: shortenUrl" />Shorten the share URL using a web service
                     </label>
                 </div>
                 <div class="share-popup-label">
