fixed style names

--- a/lib/Styles/EmbeddedContentPopup.less
+++ b/lib/Styles/EmbeddedContentPopup.less
@@ -1,12 +1,12 @@
 @embedded-content-popup-height: 70vh;
 
-.emebeded-content-popup {
+.embedded-content-popup {
     .modal;
     width: 70vw;
     height: @embedded-content-popup-height;
 }
 
-.emebeded-content-popup-content {
+.embedded-content-popup-content {
     padding: 15px;
     overflow: auto;
     height: calc(~'@{embedded-content-popup-height} - 40px - 30px');
