added opacity change to control icons

--- a/lib/Styles/DataCatalogTab.less
+++ b/lib/Styles/DataCatalogTab.less
@@ -150,12 +150,16 @@
     -o-transition: opacity 0.2s ease;
 }
 
+.data-catalog-control-icon:hover {
+    opacity: 1;
+}
+
 .data-catalog-info-icon {
     .data-catalog-control-icon
 }
 
 .data-catalog-info-icon:hover {
-  opacity: 1;
+    .data-catalog-control-icon:hover;
 }
 
 .data-catalog-enabled-item {
