changed definition to work properly with inheritance

--- a/lib/Styles/DataCatalogTab.less
+++ b/lib/Styles/DataCatalogTab.less
@@ -148,18 +148,14 @@
     -webkit-transition: opacity 0.2s ease;
     -moz-transition: opacity 0.2s ease;
     -o-transition: opacity 0.2s ease;
-}
 
-.data-catalog-control-icon:hover {
-    opacity: 1;
+    &:hover {
+        opacity: 1;
+    }
 }
 
 .data-catalog-info-icon {
     .data-catalog-control-icon
-}
-
-.data-catalog-info-icon:hover {
-    .data-catalog-control-icon:hover;
 }
 
 .data-catalog-enabled-item {
