--- a/lib/Styles/EmbeddedContentPopup.less
+++ b/lib/Styles/EmbeddedContentPopup.less
@@ -6,7 +6,7 @@
     height: @embedded-content-popup-height;
 }
 
-.embedded-content-popup-content {
+.embedded-content {
     padding: 15px;
     overflow: auto;
     height: calc(~'@{embedded-content-popup-height} - 40px - 30px');
