black background for iframe

--- a/lib/Styles/EmbeddedContentPopup.less
+++ b/lib/Styles/EmbeddedContentPopup.less
@@ -7,8 +7,9 @@
 }
 
 .embedded-content {
-    padding: 15px;
+    margin: 15px;
     overflow: auto;
     height: calc(~'@{embedded-content-popup-height} - 40px - 30px');
     font-weight: 300;
+    background-color: black;
 }
