--- a/lib/Styles/MenuBar.less
+++ b/lib/Styles/MenuBar.less
@@ -58,3 +58,9 @@
         display: none;
     }
 }
+
+@media screen and (max-width: 520px), screen and (max-height: 400px) {
+    .menu-bar {
+        display: none;
+    }
+}
