--- a/lib/Styles/Map.less
+++ b/lib/Styles/Map.less
@@ -94,3 +94,10 @@ button.cesium-infoBox-camera {
         display: none;
     }
 }
+
+// Don't displace the map on small screens like mobile phones.
+@media screen and (max-width: 520px), screen and (max-height: 400px) {
+    .map-displaced {
+        left: 0;
+    }
+}
