--- a/lib/Styles/Navigation.less
+++ b/lib/Styles/Navigation.less
@@ -122,7 +122,7 @@
 }
 
 // Don't display the nav controls on small screens like mobile phones.
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 520px), screen and (max-height: 400px) {
     .navigation-controls {
         display: none;
     }
