--- a/lib/Views/SearchTab.html
+++ b/lib/Views/SearchTab.html
@@ -23,7 +23,7 @@
                 <div class="data-catalog-group-label clickable" data-bind="click: $parent.type === 'search_result' ? $parent.toggleOpen.bind($parent) : toggleOpen, text: name, css: { 'data-catalog-opened-group': $parent.isOpen }"></div>
             </div>
 
-            <!-- ko if: ($parent.type === "search_result" ? $parent.isOpen : isOpen) && (isLoading || items.length === 0) -->
+            <!-- ko if: ($parent.type === 'search_result' ? $parent.isOpen : isOpen) && (isLoading || items.length === 0) -->
                 <div class="data-catalog-group-contents">
                     <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 1)">
                         <div class="data-catalog-member-top-row">
@@ -34,7 +34,7 @@
                 </div>
             <!-- /ko -->
 
-            <!-- ko if: $parent.type === "search_result" ? $parent.isOpen : isOpen -->
+            <!-- ko if: $parent.type === 'search_result' ? $parent.isOpen : isOpen -->
                 <div class="data-catalog-group-contents" data-bind="template: { name: 'search-catalog-item-template', foreach: items }"></div>
             <!-- /ko -->
         </div>
