--- a/lib/Views/FeatureInfoPanel.html
+++ b/lib/Views/FeatureInfoPanel.html
@@ -1,4 +1,4 @@
-<div class="feature-info-panel-holder" data-bind="css: { 'feature-info-panel-holder-hidden': !isVisible }">
+<div class="feature-info-panel-holder" data-bind="css: { 'feature-info-panel-holder-hidden': !isVisible }, click: closeIfClickOnBackground">
     <div class="feature-info-panel-holder-inner">
         <div class="feature-info-panel" data-bind="style: { 'max-width': maxWidth + 'px' }">
             <div class="feature-info-panel-body">
