--- a/lib/Styles/DataCatalogTab.less
+++ b/lib/Styles/DataCatalogTab.less
@@ -1,8 +1,15 @@
+@catalog-top-group-background-color: rgba(0,0,0, 0.2);
+@catalog-top-group-text-color: @panel-emphasized-text-color;
+@catalog-group-text-color: @panel-text-color;
+@catalog-open-group-text-color: @panel-emphasized-text-color;
+@catalog-item-text-color: @panel-text-color;
+@catalog-enabled-item-text-color: @panel-selected-text-color;
+
 .data-catalog-top-group-header {
     display: table;
     width: 100%;
     line-height: 40px;
-    background-color: rgba(0,0,0, 0.2);
+    background-color: @catalog-top-group-background-color;
     border-bottom: @panel-element-border;
     cursor: pointer;
     table-layout: fixed;
@@ -12,7 +19,7 @@
     display: table-cell;
     padding-left: 16px;
     font-size: 15px;
-    color: @panel-emphasized-text-color;
+    color: @catalog-top-group-text-color;
     word-wrap: break-word;
     max-width: 252px;
 }
@@ -21,7 +28,7 @@
     position: relative;
     width: 12px;
     height: 12px;
-    fill: @panel-emphasized-text-color;
+    fill: @catalog-top-group-text-color;
     margin-right: 16px;
 }
 
@@ -45,7 +52,7 @@
     display: table-cell;
     font-family: @default-font;
     font-size: 14px;
-    color: @panel-text-color;
+    color: @catalog-item-text-color;
     font-weight: lighter;
     word-wrap: break-word;
     max-width: 75px;
@@ -54,7 +61,7 @@
 .data-catalog-group-label {
     display: table-cell;
     font-size: 15px;
-    color: @panel-text-color;
+    color: @catalog-group-text-color;
     word-wrap: break-word;
     max-width: 252px;
 }
@@ -62,11 +69,6 @@
 .data-catalog-group-contents {
     padding-top: 5px;
     padding-bottom: 10px;
-}
-
-.data-catalog-opened-group {
-    color: @panel-emphasized-text-color;
-    fill: @panel-emphasized-text-color;
 }
 
 .data-catalog-indent0 {
@@ -104,14 +106,14 @@
     position: relative;
     width: 12px;
     height: 12px;
-    fill: @panel-text-color;
+    fill: @catalog-item-text-color;
 }
 
 .data-catalog-arrow {
   position: relative;
   width: 12px;
   height: 12px;
-  fill: @panel-text-color;
+  fill: @catalog-group-text-color;
 }
 
 .data-catalog-item-checkbox {
@@ -119,7 +121,7 @@
   top: 2px;
   width: 15px;
   height: 15px;
-  fill: @panel-text-color;
+  fill: @catalog-item-text-color;
 }
 
 .data-catalog-icon-holder {
@@ -138,7 +140,7 @@
     position: relative;
     width: 18px;
     height: 18px;
-    fill: @panel-text-color;
+    fill: @catalog-item-text-color;
     margin-right: 16px;
     opacity: 0.5;
     -webkit-transition: opacity 0.2s ease;
@@ -152,6 +154,11 @@
 
 .data-catalog-enabled-item {
     font-weight: normal;
-    color: @panel-selected-text-color;
-    fill: @panel-selected-text-color;
+    color: @catalog-enabled-item-text-color;
+    fill: @catalog-enabled-item-text-color;
+}
+
+.data-catalog-opened-group {
+    color: @catalog-open-group-text-color;
+    fill: @catalog-open-group-text-color;
 }
