Distinguish between swiping left and right.

--- a/lib/Views/ExplorerPanel.html
+++ b/lib/Views/ExplorerPanel.html
@@ -1,4 +1,4 @@
-<div class="explorer-panel" data-bind="css: { 'explorer-panel-collapsed': !isOpen }, swipeLeft: toggleOpen, swipeRight: toggleOpen">
+<div class="explorer-panel" data-bind="css: { 'explorer-panel-collapsed': !isOpen }, swipeLeft: close, swipeRight: open">
     <div class="explorer-panel-header">
         <div class="explorer-panel-tab-area" data-bind="foreach: tabs">
           <div class="explorer-panel-tab"
