--- a/lib/Styles/PopupMessage.less
+++ b/lib/Styles/PopupMessage.less
@@ -50,3 +50,21 @@
     padding:10px;
     border:1px solid gray;
 }
+
+.popup-message-actions {
+  margin-top: 20px;
+  .popup-message-action {
+    float: right;
+    margin-left: 20px;
+    padding: 10px 20px;
+    background: #596069;
+    min-width: 80px;
+    text-align: center;
+    border-radius: 2px;
+    color: white;
+    &:hover {
+      cursor: pointer;
+      background: @highlight-color;
+    }
+  }
+}
