Make WMS layer name more obvious in catalog item info, plus explain what WMS is.

--- a/lib/Styles/CatalogItemInfo.less
+++ b/lib/Styles/CatalogItemInfo.less
@@ -184,3 +184,11 @@
     display: table-cell;
     padding-left: 16px;
 }
+
+.catalog-item-info-tech-attributes {
+    font-family: monospace;
+    padding: 0.5em;
+    margin: 0.5em;
+    background-color: rgba(0,0,0, 0.2);
+
+}
