--- a/lib/Styles/CatalogItemInfo.less
+++ b/lib/Styles/CatalogItemInfo.less
@@ -90,6 +90,11 @@
     padding-bottom: 20px;
 }
 
+.catalog-item-info-section p {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
 .catalog-item-info-properties-name-cell {
     white-space: nowrap;
 }
