--- a/lib/Views/DataCatalogTab.html
+++ b/lib/Views/DataCatalogTab.html
@@ -5,9 +5,14 @@
                 <div class="data-catalog-icon-holder clickable" data-bind="click: $root.clickEnabled, style: { visibility: isMappable ? '' : 'hidden' }">
                     <div class="data-catalog-item-checkbox" data-bind="cesiumSvgPath: { path: isEnabled ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }, css: { 'data-catalog-enabled-item': isEnabled }"></div>
                 </div>
+                <!-- ko foreach: $root.getLeftSideItemControls($data) -->
+                    <div class="data-catalog-left-side-control">
+                        <div class="clickable" data-bind="click: activate, cesiumSvgPath: { path: $data.svgIcon, width: $data.svgWidth, height: $data.svgHeight }, css: $data.cssClass"></div>
+                    </div>
+                <!-- /ko -->
                 <div class="data-catalog-item-label data-catalog-enabled-item clickable" data-bind="visible: isEnabled, text: name, click: zoomToAndUseClock" title="Change the map view to show the full extent of this data item."></div>
                 <div class="data-catalog-item-label" data-bind="visible: !isEnabled, text: name"></div>
-                <!-- ko foreach: rightSideControls -->
+                <!-- ko foreach: $root.getRightSideItemControls($data) -->
                     <div class="data-catalog-right-side-control">
                         <div class="clickable" data-bind="click: activate, cesiumSvgPath: { path: $data.svgIcon, width: $data.svgWidth, height: $data.svgHeight }, css: $data.cssClass"></div>
                     </div>
