--- a/lib/Styles/DataCatalogTab.less
+++ b/lib/Styles/DataCatalogTab.less
@@ -136,12 +136,12 @@
 }
 
 .data-catalog-right-side-control {
-    .data-catalog-control
+    .data-catalog-control;
     text-align: right;
 }
 
 .data-catalog-left-side-control {
-    .data-catalog-control
+    .data-catalog-control;
     text-align: left;
 }
 
