--- a/lib/Views/NowViewingTab.html
+++ b/lib/Views/NowViewingTab.html
@@ -48,7 +48,7 @@
             <div class="now-viewing-item-details" data-bind="visible: isLegendVisible">
                 <div class="now-viewing-action-menu">
                     <div class="now-viewing-action clickable" data-bind="click: zoomToAndUseClock" title="Change the map view to show the full extent of this data item.">Zoom To</div>
-                    <!-- ko foreach: rightSideControls -->
+                    <!-- ko foreach: $root._getItemControls($data) -->
                     <div class="now-viewing-action clickable" data-bind="click: activate, text: $data.text, attr: { title: $data.name }"></div>
                     <!-- /ko -->
                     <!-- ko if: showsInfo -->
