--- a/lib/Views/NowViewingTab.html
+++ b/lib/Views/NowViewingTab.html
@@ -51,6 +51,9 @@
                     <!-- ko if: showsInfo -->
                     <div class="now-viewing-action clickable" data-bind="click: $root.showInfo.bind($root)" title="Display information about this data item.">Info</div>
                     <!-- /ko -->
+                    <!-- ko foreach: $root.getItemControls($data) -->
+                    <div class="now-viewing-action clickable" data-bind="click: activate, attr: { text: text, title: name }"></div>
+                    <!-- /ko -->
                     <div class="now-viewing-action clickable" data-bind="click: toggleEnabled" title="Remove this data item from the Now Viewing panel and from the map.">Remove</div>
                 </div>
 
