allowing specification of no data text in now viewing

--- a/lib/Views/NowViewingTab.html
+++ b/lib/Views/NowViewingTab.html
@@ -105,9 +105,7 @@
     </div>
 
     <div class="now-viewing-list" data-bind="visible: nowViewing.items.length === 0">
-        <div class="now-viewing-no-items">
-            Add data using the Data Catalogue tab.
-        </div>
+        <div class="now-viewing-no-items" data-bind="text: noDataText"></div>
     </div>
 </div>
 
