--- a/lib/Styles/NowViewingTab.less
+++ b/lib/Styles/NowViewingTab.less
@@ -42,6 +42,7 @@
     width: 20px;
     padding-left: 16px;
     line-height: 40px;
+    fill: @now-viewing-top-row-text-color;
 }
 
 .now-viewing-item-drag-handle {
