--- a/lib/Views/LocationBar.html
+++ b/lib/Views/LocationBar.html
@@ -2,7 +2,7 @@
     <!-- ko if: useProjection -->
     <div class="location-bar-label">NORTH</div>
     <!-- /ko -->
-    <!-- ko if: useProjection -->
+    <!-- ko if: !useProjection -->
     <div class="location-bar-label">LAT</div>
     <!-- /ko -->
     <div class="location-bar-value" data-bind="text: latitude"></div>
@@ -10,7 +10,7 @@
     <!-- ko if: useProjection -->
     <div class="location-bar-label">EAST</div>
     <!-- /ko -->
-    <!-- ko if: useProjection -->
+    <!-- ko if: !useProjection -->
     <div class="location-bar-label">LON</div>
     <!-- /ko -->
     <div class="location-bar-value" data-bind="text: longitude"></div>
