--- a/lib/Views/LocationBar.html
+++ b/lib/Views/LocationBar.html
@@ -1,19 +1,19 @@
 <div class="location-bar clickable" data-bind="visible: latitude && longitude, click: toggleProjection">
-    <!-- ko if: useProjection -->
-    <div class="location-bar-label">NORTH</div>
-    <!-- /ko -->
     <!-- ko if: !useProjection -->
     <div class="location-bar-label">LAT</div>
-    <!-- /ko -->
+    <div class="location-bar-value" data-bind="text: longitude"></div>
+    <div class="location-bar-label">LON</div>
     <div class="location-bar-value" data-bind="text: latitude"></div>
+    <!-- /ko -->
 
     <!-- ko if: useProjection -->
-    <div class="location-bar-label">EAST</div>
+    <div class="location-bar-label">Z</div>
+    <div class="location-bar-value" data-bind="text: utmZone"></div>
+    <div class="location-bar-label">E</div>
+    <div class="location-bar-value" data-bind="text: easting"></div>
+    <div class="location-bar-label">N</div>
+    <div class="location-bar-value" data-bind="text: northing"></div>
     <!-- /ko -->
-    <!-- ko if: !useProjection -->
-    <div class="location-bar-label">LON</div>
-    <!-- /ko -->
-    <div class="location-bar-value" data-bind="text: longitude"></div>
 
     <!-- ko if: elevation -->
     <div class="location-bar-label">ELEV</div>
