--- a/lib/Views/LocationBar.html
+++ b/lib/Views/LocationBar.html
@@ -7,7 +7,7 @@
     <!-- /ko -->
 
     <!-- ko if: useProjection -->
-    <div class="location-bar-label">Z</div>
+    <div class="location-bar-label">ZONE</div>
     <div class="location-bar-value" data-bind="text: utmZone"></div>
     <div class="location-bar-label">E</div>
     <div class="location-bar-value" data-bind="text: easting"></div>
