Don't say that we are downloading the WFS data as GeoJSON, because many (GA in particular) services do not support GeoJSON.

--- a/lib/Views/CatalogItemInfo.html
+++ b/lib/Views/CatalogItemInfo.html
@@ -88,7 +88,7 @@
             <div class="catalog-item-info-section" data-bind="if: catalogItem.dataUrlType === 'wfs' || catalogItem.dataUrlType === 'wfs-complete'">
                 <h2>Data URL</h2>
                 <div class="catalog-item-info-description">
-                    Use the link below to download GeoJSON data.  See the
+                    Use the link below to download the data.  See the
                     <a href="http://docs.geoserver.org/latest/en/user/services/wfs/reference.html" target="_blank">Web Feature Service (WFS) documentation</a>
                     for more information on customising URL query parameters.
                     <div><a data-bind="attr: { href: catalogItem.dataUrl }, text: catalogItem.dataUrl" target="_blank"></a></div>
