--- a/lib/Views/DataCatalogTab.html
+++ b/lib/Views/DataCatalogTab.html
@@ -34,7 +34,17 @@
                 <div class="data-catalog-icon-holder clickable" data-bind="click: $root.clickOpen">
                     <div class="data-catalog-arrow" data-bind="cesiumSvgPath: { path: isOpen ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }, css: { 'data-catalog-opened-group': isOpen }"></div>
                 </div>
+                <!-- ko foreach: $root.getLeftSideMemberControls($data) -->
+                <div class="data-catalog-left-side-control">
+                    <div class="clickable" data-bind="click: activate, attr: { title: name }, cesiumSvgPath: { path: svgIcon, width: svgWidth, height: svgHeight }, css: cssClass"></div>
+                </div>
+                <!-- /ko -->
                 <div class="data-catalog-group-label clickable" data-bind="click: $root.clickOpen, text: name, css: { 'data-catalog-opened-group': isOpen }"></div>
+                <!-- ko foreach: $root.getRightSideMemberControls($data) -->
+                <div class="data-catalog-right-side-control">
+                    <div class="clickable" data-bind="click: activate, attr: { title: name }, cesiumSvgPath: { path: svgIcon, width: svgWidth, height: svgHeight }, css: cssClass"></div>
+                </div>
+                <!-- /ko -->
             </div>
 
             <!-- ko if: isOpen && (isLoading || items.length === 0) -->
