--- a/lib/Views/InvokeFunctionPanel.html
+++ b/lib/Views/InvokeFunctionPanel.html
@@ -1,11 +1,13 @@
 <div class="modal-background" data-bind="click: closeIfClickOnBackground">
-    <div class="invoke-function-panel-holder-inner">
-        <div class="invoke-function-panel" data-bind="style: { 'max-width': maxWidth + 'px' }">
-            <div class="invoke-function-panel-body">
-                Foo!!
-                <div class="invoke-function-parameter" data-bind="foreach: catalogFunction.parameters">
-                    Parameter
-                </div>
+    <div class="invoke-function-panel" data-bind="style: { 'max-width': maxWidth + 'px' }">
+        <div class="modal-header">
+            <div class="modal-close-button" data-bind="click: close">&times;</div>
+            <h1 data-bind="text: catalogFunction.name"></h1>
+        </div>
+        <div class="invoke-function-panel-content">
+            <div class="invoke-function-panel-description" data-bind="markdown: catalogFunction.description"></div>
+            <div class="invoke-function-parameters" data-bind="foreach: catalogFunction.parameters">
+                <div class="invoke-function-parameter" data-bind="embeddedComponent: $root._getComponentForParameter($data)"></div>
             </div>
         </div>
     </div>
