Show loaded data matching selected region type.

--- a/lib/Views/RegionTypeParameterEditor.html
+++ b/lib/Views/RegionTypeParameterEditor.html
@@ -1,2 +1,2 @@
 <span data-bind="text: parameter.name"></span>
-<select data-bind="options: regions"></select>
+<select data-bind="options: regions, value: value"></select>
