--- a/lib/Views/DataCatalogTab.html
+++ b/lib/Views/DataCatalogTab.html
@@ -12,7 +12,7 @@
                 <!-- /ko -->
                 <!-- ko if: typeof invoke !== 'undefined' -->
                 <div class="data-catalog-icon-holder clickable" data-bind="click: $root.clickAdd.bind($root)">
-                    <div class="data-catalog-item-checkbox" data-bind="cesiumSvgPath: { path: $root.svgPlus, width: 11, height: 12 }"></div>
+                    <div class="data-catalog-item-plus" data-bind="cesiumSvgPath: { path: $root.svgPlus, width: 11, height: 12 }"></div>
                 </div>
                 <!-- /ko -->
                 <!-- ko foreach: $root.getLeftSideItemControls($data) -->
