Able to invoke the whyamispecial service, sort of.

--- a/lib/Styles/InvokeFunctionPanel.less
+++ b/lib/Styles/InvokeFunctionPanel.less
@@ -31,3 +31,8 @@
 .invoke-function-parameter {
     padding-top: 20px;
 }
+
+.invoke-function-panel-go-button {
+    padding: 20px;
+    text-align: center;
+}
