--- a/lib/Views/RegionParameterEditor.html
+++ b/lib/Views/RegionParameterEditor.html
@@ -1,3 +1,3 @@
-<div data-bind="text: parameter.name"></div>
+<div class="parameter-editor-heading" data-bind="text: parameter.name"></div>
 <div>There should be a map here, with awesome functionality for selecting a region.  For now, just type a region ID.</div>
 <input type="text" data-bind="value: value" />
