--- a/lib/Views/RegionTypeParameterEditor.html
+++ b/lib/Views/RegionTypeParameterEditor.html
@@ -1,2 +1,2 @@
-<span data-bind="text: parameter.name"></span>
+<div class="parameter-editor-heading" data-bind="text: parameter.name"></div>
 <select data-bind="options: regions, value: value"></select>
