Improve styling of invoke function panel.

--- a/lib/Views/RegionParameterEditor.html
+++ b/lib/Views/RegionParameterEditor.html
@@ -1,3 +1,11 @@
-<div class="parameter-editor-heading" data-bind="text: parameter.name"></div>
-<div>There should be a map here, with awesome functionality for selecting a region.  For now, just type a region ID.</div>
-<input type="text" data-bind="value: value" />
+<div>
+    <label class="parameter-editor-table-left" data-bind="text: parameter.name, attr: { for: 'parameter-editor-' + encodeURIComponent(parameter.name) }"></label>
+    <div class="parameter-editor-table-right">
+        <div>
+            There should be a map here, with awesome functionality for selecting a region.  For now, just type a region ID.
+        </div>
+        <div>
+            <input type="text" data-bind="value: value" />
+        </div>
+    </div>
+</div>
