--- a/lib/Styles/InvokeFunctionPanel.less
+++ b/lib/Styles/InvokeFunctionPanel.less
@@ -36,3 +36,51 @@
     padding: 20px;
     text-align: center;
 }
+
+.parameter-editor-table-left {
+    display: inline-block;
+    position: relative;
+    width: 150px;
+    text-align: right;
+    vertical-align: top;
+    font-weight: bold;
+}
+
+.parameter-editor-table-right {
+    display: inline-block;
+    width: 500px;
+    padding-left: 10px;
+    vertical-align: top;
+}
+
+.parameter-editor-heading {
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+.parameter-editor-tree-item {
+    display: table;
+}
+
+.parameter-editor-tree-item-element {
+    display: table-cell;
+}
+
+.parameter-editor-tree-icon-holder {
+    width: 20px;
+}
+
+.parameter-editor-tree-arrow {
+  position: relative;
+  width: 12px;
+  height: 12px;
+  fill: @catalog-group-text-color;
+}
+
+.parameter-editor-tree-indent {
+    padding-left: 12px;
+}
+
+.parameter-editor-table-right select {
+    margin-top: 0;
+}
