--- a/lib/Views/RegionParameterEditor.html
+++ b/lib/Views/RegionParameterEditor.html
@@ -1,11 +1,12 @@
 <div>
     <label class="parameter-editor-table-left" data-bind="text: parameter.name, attr: { for: 'parameter-editor-' + encodeURIComponent(parameter.name) }"></label>
     <div class="parameter-editor-table-right">
-        <div>
-            There should be a map here, with awesome functionality for selecting a region.  For now, just type a region ID.
+        <div class="parameter-editor-text-input">
+            <input type="text" size="45" readonly data-bind="value: displayValue, attr: { id: 'parameter-editor-' + encodeURIComponent(parameter.name) }" placeholder="Select a region by clicking the map below" />
         </div>
-        <div>
-            <input type="text" data-bind="value: value" />
+        <div class="parameter-editor-map-holder">
+            <div class="parameter-editor-map"></div>
+            <div class="parameter-editor-map-ui"></div>
         </div>
     </div>
 </div>
